NYSD9-600: Overlapping Fields Fix

--- a/web/themes/custom/nysenate_theme/src/patterns/global/forms/_forms.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/global/forms/_forms.scss
@@ -304,6 +304,20 @@
     select {
       margin-bottom: 40px;
     }
+
+    &.js-form-item-field-address-0-address-administrative-area {
+      float: unset;
+      margin: 0 1em 0 0;
+      width: auto;
+
+      select {
+        height: 2.3125rem;
+        padding: 0px 40px 0 20px;
+        min-height: unset;
+        width: auto;
+        box-sizing: border-box;
+      }
+    }
   }
 
   .webform-submission-form {
